# jornada_workshop_01

./: .gitignore  README.md  main.py  pyproject.toml
app/ETL/: extract.py
src/pipeline/: extract.py
