[tool.poetry]
name = "jornada-workshop-01"
version = "0.1.0"
description = ""
authors = ["Aline Silveira <aline@outlook.ie>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
pandas = "^2.2.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
